--- a/formacio.html
+++ b/formacio.html
@@ -101,7 +101,7 @@
             </ul>
             <h3>1995-1997</h3>
             <ul>
-                <li>Màster en Arts Digitals (UPF).</li>
+                <li>Màster en Arts Digitals-European Media Master(UPF)- 1ª Promoció.</li>
             </ul>
         </section>
        
