--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <link rel="stylesheet" href="hotels.css">
 
 </head>
-<body>
+<body class="body-no-scroll">
   <video class="video-background" autoplay loop muted>
     <source src="mar.mp4" type="video/mp4">
    
     El teu navegador no suporta vídeo en HTML5.
   </video>
+  <div id="skills-overlay"></div>
   <div class="topnav">
     <a href="bio.html">Bio</a>
     <a href="treballs.html">Works</a>
@@ -21,5 +22,6 @@
   <div class="content">
     <h1>Francesc Bedós</h1>
   </div>
+  <script src="skills-animation.js" defer></script>
 </body>
 </html>
