--- a/formacio.html
+++ b/formacio.html
@@ -14,7 +14,7 @@
     <main>
          <section id="eines-tecnologiques">
             <h2>Habilitats Tecnològiques</h2>
-            <p>Domini d'un ampli espectre d'eines i tecnologies, incloent (llista no exhaustiva basada en la formació):</p>
+            <p>Domini d'un ampli espectre d'eines i tecnologies:</p>
             <ul>
                 <li><strong>Intel·ligència Artificial:</strong> Eines de IA -' Vibe Coding '(Jules - Cursor - Claude Code)</li>
                 <li><strong>Llenguatges de Programació:</strong> GO, React (JavaScript), PHP, SQL (MariaDB/MySQL)</li>
