--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pàgina amb Fons de Vídeo</title>
+  <title>Francesc Bedós</title>
   <link rel="stylesheet" href="hotels.css">
 
 </head>
@@ -22,6 +22,6 @@
   <div class="content">
     <h1>Francesc Bedós</h1>
   </div>
-  <script src="skills-animation.js" defer></script>
+  <script src="skills-animation.js"></script>
 </body>
 </html>
