--- a/formacio.html
+++ b/formacio.html
@@ -72,7 +72,8 @@
                 <li>Introducció a R, visualització gràfica i Big Data</li>
                 <li>Scrum, introducció al desenvolupament àgil de software</li>
                 <li>Iniciació a Python</li>
-                <li>Internet de les coses (IoT) per a persones curioses -</li>
+                <li>Internet de les coses (IoT) </li>
+                <li>Introducción a IoT </li>
                 <li>Saps fer servir el núvol?</li>
             </ul>
             <h3>2019</h3>
