--- a/formacio.html
+++ b/formacio.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="hotels.css">
 </head>
 <body>
+  <div class="background-container">
     <header>
         <h1>Formació i Coneixements</h1>
         <a href="index.html" class="button">Enrera / Inici</a>
@@ -14,7 +15,7 @@
     <main>
          <section id="eines-tecnologiques">
             <h2>Habilitats Tecnològiques</h2>
-            <p>Domini d'un ampli espectre d'eines i tecnologies, incloent (llista no exhaustiva basada en la formació):</p>
+            <p>Domini d'un ampli espectre d'eines i tecnologies:</p>
             <ul>
                 <li><strong>Intel·ligència Artificial:</strong> Eines de IA -' Vibe Coding '(Jules - Cursor - Claude Code)</li>
                 <li><strong>Llenguatges de Programació:</strong> GO, React (JavaScript), PHP, SQL (MariaDB/MySQL)</li>
@@ -72,7 +73,8 @@
                 <li>Introducció a R, visualització gràfica i Big Data</li>
                 <li>Scrum, introducció al desenvolupament àgil de software</li>
                 <li>Iniciació a Python</li>
-                <li>Internet de les coses (IoT) per a persones curioses -</li>
+                <li>Internet de les coses (IoT) </li>
+                <li>Introducción a IoT </li>
                 <li>Saps fer servir el núvol?</li>
             </ul>
             <h3>2019</h3>
@@ -109,5 +111,6 @@
     <footer>
         <p>&copy; 2025 Francesc Bedós</p>
     </footer>
+  </div>
 </body>
 </html>
