--- a/index.html
+++ b/index.html
@@ -3,25 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pàgina amb Fons de Vídeo</title>
+  <title>Francesc Bedós</title>
   <link rel="stylesheet" href="hotels.css">
 
 </head>
-<body class="body-no-scroll">
-  <video class="video-background" autoplay loop muted>
-    <source src="mar.mp4" type="video/mp4">
-   
-    El teu navegador no suporta vídeo en HTML5.
-  </video>
-  <div id="skills-overlay"></div>
-  <div class="topnav">
-    <a href="bio.html">Bio</a>
-    <a href="treballs.html">Works</a>
-    <a href="formacio.html">Ongoing training</a>
-</div>
-  <div class="content">
-    <h1>Francesc Bedós</h1>
+<body>
+  <div class="background-container">
+    <div id="skills-overlay"></div>
+    <div class="topnav">
+      <a href="bio.html">Bio</a>
+
+      <a href="formacio.html">Ongoing training</a>
   </div>
-  <script src="skills-animation.js" defer></script>
+    <div class="content">
+      <h1>Francesc Bedós</h1>
+    </div>
+    <script src="skills-animation.js"></script>
+  </div>
 </body>
 </html>
