--- a/treballs.html
+++ b/treballs.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="hotels.css">
 </head>
 <body>
+  <div class="background-container">
     <header>
         <h1>Els Meus Treballs</h1>
         <a href="index.html" class="button">Enrera / Inici</a>
@@ -45,5 +46,6 @@
     <footer>
         <p>&copy; 2024 Francesc Bedós</p>
     </footer>
+  </div>
 </body>
 </html>
