--- a/bioEN.html
+++ b/bioEN.html
@@ -16,7 +16,7 @@
     <main>
         <section id="summary">
             <h2>Summary</h2>
-            <p>Professional with extensive experience in Service Delivery and specialized technical support, with a strategic focus on ERP/API systems integration. Combines solid technical expertise with excellent project management skills, demonstrating a proven ability to lead complex migrations and high-impact technological implementations.</p>
+            <p>Professional with extensive experience in Web Development, Service Delivery, API integrations, and specialized technical support. I combine a solid technical background with excellent project management skills, demonstrating a proven ability to lead complex migrations and high-impact technology implementations.</p>
         </section>
 
         <section id="specialization">
