--- a/formacio.html
+++ b/formacio.html
@@ -34,8 +34,9 @@
 
         <section id="formacio-cronologica">
             <h2>Històric de Formació</h2>
-            <h3>2025 (Any del CV)</h3>
+            <h3>2025</h3>
             <ul>
+                <li>Curso en IA + Ciberseguridad para CEOs y Managers (Proyecto Europeo TECH TIME 2 SKILL)</li>
                 <li>Eines Big Data i Govern de les Dades (Sepe)</li>
                 <li>Ciberseguretat-Prevenció,Anàlisi i Resposta (Sepe)</li>
                 <li>Transformació Digital (Sepe)</li>
