--- a/formacioEN.html
+++ b/formacioEN.html
@@ -34,8 +34,9 @@
 
         <section id="chronological-training">
             <h2>Training History</h2>
-            <h3>2025 (CV Year)</h3>
+            <h3>2025</h3>
             <ul>
+                <li>AI + Cybersecurity Course for CEOs and Managers (European Project TECH TIME 2 SKILL)</li>
                 <li>Big Data Tools and Data Governance (Sepe)</li>
                 <li>Cybersecurity-Prevention, Analysis and Response (Sepe)</li>
                 <li>Digital Transformation (Sepe)</li>
