--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </div>
     <div class="content">
       <h1>Francesc Bedós</h1>
-      <div id="skills-overlay"></div>
+     
+      <div id="image"></div>
     </div>
     <script src="skills-animation.js"></script>
   </div>
